--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,6 +6,28 @@
   html {
     font-family: Helvetica, system-ui, sans-serif;
   }
+
+  /* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: theme('colors.primary.500') #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: theme('colors.primary.500');
+    border-radius: 16px;
+    border: 5px solid #ffffff;
+  }
 }
 
 @layer utilities {
